--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio",
+  "name": "kushbhandari",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "motion": "^11.14.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
